teacher's handlers docs
